--- a/app/view/pc/styles/certified_architect.scss
+++ b/app/view/pc/styles/certified_architect.scss
@@ -1,5 +1,8 @@
-$main-color: #fdc5e0;
+$main-color: #f068a9;
 $main-padding: 0 50px 30px;
+$black-color: #101213;
+$gray-color: #5e6468;
+$t-hover-color: #ee534e;
 
 .best-certified-architect {
     margin-top: 30px;
@@ -7,14 +10,103 @@ $main-padding: 0 50px 30px;
     .activity-list {
         margin: $main-padding;
 
-        .item-img {
-            margin-bottom: 30px;
+        .list-item {
+            position: relative;
 
-            background-position: center;
-            background-size: cover;
+            display: block;
 
-            width: 500px;
-            height: 300px;
+            margin-bottom: 50px;
+            height: 520px;
+            width: 330px;
+
+            border-radius: 5px;
+
+            .list-img-div {
+                position: relative;
+
+                width: 330px;
+                height: 330px;
+
+                overflow: hidden;
+
+                cursor: pointer;
+
+                .item-img {
+                    width: 330px;
+                    height: 330px;
+
+                    border-radius: 5px 5px 0 0;
+
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+
+                .item-cover {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+
+                    border-radius: 5px;
+
+                    background-color: rgba(102, 102, 102, 0.44);;
+                
+                    opacity: 0;
+                }
+            }
+
+            .list-img-div:hover {
+                .item-img {
+                    transform: rotate(0deg) scale(1.2) translate(0%,0%);
+
+                    transition: All 8s ease;
+                }
+
+                .item-cover {
+                    opacity: 1;
+
+                    transition: All 1s ease;
+                }
+            }
+
+            .item-text {
+                margin-top: 10px;
+                padding: 10px;
+                
+                .t-title {
+                    color: $black-color;
+                }
+
+                .t-title:hover {
+                    color: $t-hover-color;
+                }
+
+                .t-describe {
+                    margin-top: 15px;
+
+                    color: $gray-color;
+                }
+
+                .t-type {
+                    position: absolute;
+                    bottom: 10px;
+
+                    color: $black-color;
+
+                    .icon {
+                        font-size: 30px;
+                    }
+                }
+            }
+        }
+
+        .list-item:hover {
+            box-shadow:  0px 17px 50px 0px rgba(0,0,0,0.188235);
+            
+            transform: translate3d(0px,-2px,0px);
+            transition: all 0.3s ease;
         }
     }
 }
@@ -22,19 +114,112 @@ $main-padding: 0 50px 30px;
 .all-certified-architect {
     margin-top: 30px;
 
-    background-color: #e5e2e2;
-
     .activity-list {
         margin: $main-padding;
 
-        .item-img {
-            margin-bottom: 30px;
+        .list-item {
+            margin-bottom: 10px;
+            width: 100%;
+            height: 190px;
 
-            background-position: center;
-            background-size: cover;
+            border-bottom: 1px solid #b8bdc0;
 
-            width: 500px;
-            height: 300px;
+            .content {
+                width: 100%;
+                height: 180px;
+
+                .describe {
+                    margin: 10px 0 0 10px;
+
+                    .portrait {
+                        margin-right: 30px;
+                        width: 100px;
+                        height: 100px;
+        
+                        border-radius: 50px;
+    
+                        background-position: center center;
+                        background-size: cover;
+                    }
+        
+                    .detail {
+                        .nick-name {
+                            font-size: 25px;
+                            line-height: 35px;
+        
+                            color: $black-color;
+                        }
+        
+                        .post {
+                            font-size: 18px;
+                            line-height: 30px;
+        
+                            color: $gray-color;
+                        }
+        
+                        .grade {
+                            margin-top: 10px;
+        
+                            font-size: 18px;
+                            line-height: 30px;
+        
+                            color: $gray-color;
+        
+                            .number {
+                                font-size: 20px;
+        
+                                color: $black-color;
+                            }
+                        }
+        
+                        .btn-div {
+                            margin-top: 10px;
+        
+                            
+                            
+                            .attent-btn{
+                                width: 100px;
+                                height: 38px;
+        
+                                background-color: rgb(224, 54, 54);
+                                color: #fff;
+                            }
+        
+                            .home-btn {
+                                width: 100px;
+                                height: 38px;
+        
+                                background-color: rgb(245, 239, 239);
+                                color: rgb(43, 37, 37);
+                            }
+                        }
+                    }
+                }
+    
+                .product {
+                    margin: 0 10px 0 30px;
+                    width: 700px;
+                    height: 200px;
+    
+                    .img-list {
+                        .img {
+                            margin: 10px 0 0 5px;
+                            width: 200px;
+                            height: 160px;
+    
+                            background-position: center center;
+                            background-size: cover;
+                        }
+                    }
+                }
+            }
+
+            .content:hover {
+                box-shadow: 0px 4px 10px 5px rgba(0,0,0,0.2);
+
+                transform: translate3d(0px,-4px,0px);
+                transition: all 0.3s ease;
+            }
         }
     }
 }
